--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc-watch --onSuccess \"nodemon dist/server.js\""
+    "start:dev": "tsc-watch --onSuccess \"nodemon dist/server.js\"",
+    "start": "tsc --onSuccess \"node dist/server.js\""
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
