--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "tsc-watch --onSuccess \"nodemon dist/server.js\"",
-    "start": "tsc --onSuccess \"node dist/server.js\""
+    "start": "tsc && node dist/server.js"
   },
   "author": "",
   "license": "MIT",
@@ -15,6 +15,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.10",
     "nodemon": "^3.1.9",
