--- a/Front/package.json
+++ b/Front/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.2",
     "@types/i18next": "^13.0.0",
     "@types/react-i18next": "^8.1.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.11",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
