--- a/Front/package.json
+++ b/Front/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
+    "@toolpad/core": "^0.12.0",
     "@types/i18next": "^13.0.0",
     "@types/react-i18next": "^8.1.0",
     "date-fns": "^4.1.0",
