--- a/Front/package.json
+++ b/Front/package.json
@@ -14,10 +14,11 @@
     "@chakra-ui/tabs": "^3.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.2",
+    "@mui/material": "^6.4.5",
     "@toolpad/core": "^0.12.0",
     "@types/i18next": "^13.0.0",
     "@types/react-i18next": "^8.1.0",
+    "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.11",
     "i18next": "^24.2.2",
