--- a/Front/package.json
+++ b/Front/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
